RESOLVED FIXED 58798
WebKit needs to stop importing <AppKit/NSTextChecker.h>
https://bugs.webkit.org/show_bug.cgi?id=58798
Summary WebKit needs to stop importing <AppKit/NSTextChecker.h>
Jia Pu
Reported 2011-04-18 11:03:38 PDT
NSTextChecker.h is private header. We should use the public header NSSpellChecker.h, and the equivalent names and functions defined there. <rdar://problem/9294938>
Attachments
Patch (v1) (18.13 KB, patch)
2011-04-18 11:13 PDT, Jia Pu
no flags
Patch (v2) (17.99 KB, patch)
2011-04-18 13:25 PDT, Jia Pu
no flags
Jia Pu
Comment 1 2011-04-18 11:13:14 PDT
Created attachment 90057 [details] Patch (v1)
Mark Rowe (bdash)
Comment 2 2011-04-18 11:23:07 PDT
Comment on attachment 90057 [details] Patch (v1) View in context: https://bugs.webkit.org/attachment.cgi?id=90057&action=review r=me > Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:80 > +- (NSString *)languageForWordRange:(NSRange)range inString:(NSString *)string orthography:(NSOrthography *)orthography; I think you should drop the comment. In other places we call the category “AppKitSecretsIKnow”. > Source/WebKit2/UIProcess/mac/TextCheckerMac.mm:36 > +- (NSString *)languageForWordRange:(NSRange)range inString:(NSString *)string orthography:(NSOrthography *)orthography; Same as above.
mitz
Comment 3 2011-04-18 11:30:30 PDT
Comment on attachment 90057 [details] Patch (v1) View in context: https://bugs.webkit.org/attachment.cgi?id=90057&action=review >> Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:80 >> +- (NSString *)languageForWordRange:(NSRange)range inString:(NSString *)string orthography:(NSOrthography *)orthography; > > I think you should drop the comment. In other places we call the category “AppKitSecretsIKnow”. That is the old convention. The modern convention is Web<class>Details, so in this case, WebNSSpellCheckerDetails.
Jia Pu
Comment 4 2011-04-18 13:25:58 PDT
Created attachment 90082 [details] Patch (v2)
WebKit Commit Bot
Comment 5 2011-04-18 20:48:06 PDT
Comment on attachment 90082 [details] Patch (v2) Clearing flags on attachment: 90082 Committed r84220: <http://trac.webkit.org/changeset/84220>
WebKit Commit Bot
Comment 6 2011-04-18 20:48:11 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2011-04-18 20:50:26 PDT
The commit-queue encountered the following flaky tests while processing attachment 90082 [details]: java/lc3/JSObject/ToObject-001.html bug 53091 (author: ap@webkit.org) http/tests/xmlhttprequest/cross-origin-no-authorization.html bug 33357 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.