third_party/WebKit/Source/WebKit2/UIProcess/mac/CorrectionPanel.h
@@ -28,7 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define CorrectionPanel_h
 
 #if !defined(BUILDING_ON_SNOW_LEOPARD)
-#import <AppKit/NSTextChecker.h>
+#import <AppKit/NSSpellChecker.h>
 #import <WebCore/SpellingCorrectionController.h>
 #import <wtf/RetainPtr.h>
 
@@ -48,7 +48,7 @@ public:
 private:
     bool isShowing() const { return m_view; }
     void dismissInternal(WebCore::ReasonForDismissingCorrectionPanel, bool dismissingExternally);
-    void handleAcceptedReplacement(NSString* acceptedReplacement, NSString* replaced, NSString* proposedReplacement, NSCorrectionBubbleType);
+    void handleAcceptedReplacement(NSString* acceptedReplacement, NSString* replaced, NSString* proposedReplacement, NSCorrectionIndicatorType);
 
     bool m_wasDismissedExternally;
     WebCore::ReasonForDismissingCorrectionPanel m_reasonForDismissing;
